Add og image to all posts

--- a/_posts/2015-04-06-log4j2-yaml.md
+++ b/_posts/2015-04-06-log4j2-yaml.md
@@ -4,6 +4,7 @@ categories: tech
 tags: log4j spring-boot spring-framework java
 header:
   teaser: /assets/posts/2015-04-06-log4j2-yaml-800x300.jpg
+  og_image: /assets/posts/2015-04-06-log4j2-yaml-800x300.jpg
 ---
 
 設定ファイル関係を書くなら、
